--- a/netflix.html
+++ b/netflix.html
@@ -46,7 +46,7 @@
                 </div>  
                 <span class="adminP">
                     <a  href="">
-                        Administrar perfiles
+                      <h2>Administrar perfiles</h2>  
                     </a>
                 </span>                        
         </section>      
