--- a/google.html
+++ b/google.html
@@ -19,16 +19,22 @@
             <div class="appGoo"></div>
             <div class="usrImg"></div>
         </div>
-        <div class="logoGoo">
-            <div></div>
+        <div class="flexCenter">
+            <div class="logoGoo"></div>
         </div>
         <div>
             <div>
                 
             </div>
-            <div>
-                <input type="sumit" aria-label="Buscar con Google">
-                <input type="sumit" aria-label="Me siento con suerte">
+            <div class="flexCol">
+                <div>
+                    <input type="search">
+                </div>
+                <div class="flexRow">
+                    <input type="submit" class="btnSearch" value="Buscar con Google">
+                    <input type="submit" class="btnSearch" value="Me siento con suerte">
+                </div>
+                
             </div>
         </div>
         <div></div>
