Agrega Pagina modifica Css

--- a/netflix.html
+++ b/netflix.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body class="bodyNetflix">
-    <main >
-        <section >
+    <main>
+        <section>
             <div>
                 <a class="logoNet" href=""></a>
             </div>
@@ -45,7 +45,7 @@
                                    
                 </div>  
                 <span class="adminP">
-                    <a  href="">
+                    <a  href="" class="adminPro">
                       <h2>Administrar perfiles</h2>  
                     </a>
                 </span>                        
