--- a/index.html
+++ b/index.html
@@ -4,17 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bienvenido</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 <body>
     <main>
-        <h1>Mis actividades</h1>
-        <a href="./google.html">Google Clon</a>
-        <a href="./netflix.html">Netflix Clon</a>
-        <a href="./nft.html">NFT Clon</a>
+        
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Mis actividades</h1>
+              <p class="lead">Bienvenido a mi perfil.</p>
+            </div>
+          </div>
+        <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./google.html">Google Clon</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./netflix.html">Netflix Clon</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./nft.html">NFT Clon</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pokemonCartas.html">Cartas Pokemon</a>
+              </li>
+          </ul>
+        <hr />
+        
         <h2>
             Actividades pasadas
         </h2>
+            <a href=""></a>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
 </html>
