--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./pokemonCartas.html">Cartas Pokemon</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./banderas.html">Banderas</a>
+              </li>
           </ul>
         <hr />
         
