--- a/netflix.html
+++ b/netflix.html
@@ -28,19 +28,19 @@
                 </div>        
                 <div class="profile_img">
                     <a class="imgM" href=""></a>
-                    MIGUEL
+                    <span>MIGUEL</span>
                 </div>               
                 <div class="profile_img">
                     <a class="imgD" href=""></a>
-                    DIANA LUCIA
+                    <span >DIANA LUCIA</span>
                 </div>
                 <div class="profile_img">
                     <a class="imgMT" href=""></a>
-                    MARIA TERESA
+                    <span>MARIA TERESA</span> 
                 </div> 
                 <div class="profile_img">
                     <a class="imgNi" href=""></a>
-                    Niños
+                    <span>Niños</span> 
                 </div>                    
                                    
                 </div>  
