--- a/pokemonCartas.html
+++ b/pokemonCartas.html
@@ -5,15 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokes shiny</title>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/pokeStyles.css">
 </head>
 <body class="pokeBody">
     <main class="pokeCol">
         <section class="pokeRow">
             <div class="pokeCard">
-                <div class="poke_bg">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/129.png">
-                </div>
+                <article class="magiImg"></article>
                 <div class="poke_data">
                     <div class="poke_name">magikarp</div>
                     <div class="poke_type">Pokemon type</div>
@@ -29,12 +27,12 @@
                 </div>
             </div>
             <div class="pokeCard">
-                <div class="poke_bg">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/79.png">
+                <div class="chariImg">
+                    
                 </div>
                 <div class="poke_data">
-                    <div class="poke_name">Slowpoke</div>
-                    <div class="poke_type">water</div>
+                    <div class="poke_name">charizard</div>
+                    <div class="poke_type">Fire, Flying</div>
                 </div>
             </div>
             <div class="pokeCard">
