Cambios en carpetas

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,19 +18,19 @@
           </div>
         <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./google.html">Google Clon</a>
+              <a class="nav-link active" aria-current="page" href="./googleClon/google.html">Google Clon</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./netflix.html">Netflix Clon</a>
+                <a class="nav-link active" aria-current="page" href="./neflixClon/netflix.html">Netflix Clon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./nft.html">NFT Clon</a>
+                <a class="nav-link active" aria-current="page" href="./nftClon/nft.html">NFT Clon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./pokemonCartas.html">Cartas Pokemon</a>
+                <a class="nav-link active" aria-current="page" href="./pokeCards/pokemonCartas.html">Cartas Pokemon</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./banderas.html">Banderas</a>
+                <a class="nav-link active" aria-current="page" href="./flags/banderas.html">Banderas</a>
               </li>
           </ul>
         <hr />
