--- a/neflixClon/netflix.html
+++ b/neflixClon/netflix.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
-    <link rel="stylesheet" href="./styles/netStyles.css">
+    <link rel="stylesheet" href="../neflixClon/styles/netStyles.css">
 </head>
 <body class="bodyNetflix">
     <main>
@@ -21,7 +21,9 @@
             </h1>
             <div class="profile_flex">                   
                 <div class="profile_img">
-                    <a class="imgMiguel" href=""></a>
+                    <a href="#" class="imgMiguel">
+                        <article ></article>
+                    </a>
                     <span>
                         MIGUEL ANGEL
                     </span> 
