Se agregan Paginas

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./flags/banderas.html">Banderas</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./devtoClon/devTo.html">DevTo Clon</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./reactClon/react.html">React Clon</a>
+              </li>
           </ul>
         <hr />
         
