Se agregan Cambios

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="nav-link active" aria-current="page" href="./flags/banderas.html">Banderas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./devtoClon/devTo.html">DevTo Clon</a>
+                <a class="nav-link active" aria-current="page" href="./devToClon/devTo.html">DevTo Clon</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./reactClon/react.html">React Clon</a>
