Se agrega responsividad

--- a/reactClon/react.html
+++ b/reactClon/react.html
@@ -30,9 +30,9 @@
             
             
             <section class="flexRow">
-                <a href="" class="btnLink fontTamOn">v17.0.2</a>
-                <a href="" class="btnLink flexRow fontTamOn"><i class="iconLang"></i> Languagues</a>
-                <a href="" class="btnLink fontTamOn">GitHub</a>
+                <a href="" class="btnLink fontTamOn"><span>v17.0.2</span> </a>
+                <a href="" class="btnLink flexRow fontTamOn"><i class="iconLang"></i><span>Languagues</span> </a>
+                <a href="" class="btnLink fontTamOn"><span>GitHub</span></a>
             </section>
             <section></section>
             <section></section>
