--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./reactClon/react.html">React Clon</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./static-job-clon/static.html">Static Clon</a>
+              </li>
           </ul>
         <hr />
         
