--- a/static-job-clon/static.html
+++ b/static-job-clon/static.html
@@ -15,7 +15,7 @@
     <main>
         <section >
             <article class="flex-row bg-white">
-                <div><a href="#" class="imgPost " style="background: url(./static-job-clon/images/photosnap.svg);"></a></div> 
+                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
                 <article class="flex-col ">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
@@ -35,8 +35,7 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
-                </article>
-                
+                </article>   
             </article>
             <article class="">
                 <a href="" class=""></a>
