--- a/static-job-clon/static.html
+++ b/static-job-clon/static.html
@@ -13,6 +13,11 @@
 </head>
 <body class="bg-liGraCy">
     <main>
+        <head>
+            <section class="bg-desaDc">
+                <img src="./images/bg-header-desktop.svg">
+            </section>
+        </head>
         <section >
             <article class="flex-row bg-white">
                 <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
