--- a/static-job-clon/static.html
+++ b/static-job-clon/static.html
@@ -18,7 +18,7 @@
                 <img src="./images/bg-header-desktop.svg">
             </section>
         </head>
-        <section >
+        <section class="d-flex flex-column align-items-center justify-content-center">
             <article class="flex-row bg-white">
                 <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
                 <article class="flex-col ">
