--- a/static-job-clon/static.html
+++ b/static-job-clon/static.html
@@ -19,7 +19,7 @@
             </section>
         </head>
         <section class="d-flex flex-column align-items-center justify-content-center">
-            <article class="flex-row bg-white">
+            <article class="flex-row bg-white m-3 p-2">
                 <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
                 <article class="flex-col ">
                     <div class="flex-row">
@@ -42,87 +42,213 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="">
-                <a href="" class=""></a>
-                <article class="">
-                    <button></button><button></button><button></button>
-                    <p></p>
-                    <a href=""></a><a href=""></a><a href=""></a>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/manage.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">Manage</button>
+                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
+                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                    </div>
+                    <h1>Fullstack Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
                 </article>
-                <button></button><button></button><button></button><button></button>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Fullstack</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Midweight</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Python</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">React</button></div>            
+                </article>   
             </article>
-            <article class="">
-                <a href="" class=""></a>
-                <article class="">
-                    <button></button><button></button><button></button>
-                    <p></p>
-                    <a href=""></a><a href=""></a><a href=""></a>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
+                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
+                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                    </div>
+                    <h1>Senior Frontend Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
                 </article>
-                <button></button><button></button><button></button><button></button>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                </article>   
             </article>
-            <article class="">
-                <a href="" class=""></a>
-                <article class="">
-                    <button></button><button></button><button></button>
-                    <p></p>
-                    <a href=""></a><a href=""></a><a href=""></a>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
+                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
+                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                    </div>
+                    <h1>Senior Frontend Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
                 </article>
-                <button></button><button></button><button></button><button></button>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                </article>   
             </article>
-            <article class="">
-                <a href="" class=""></a>
-                <article class="">
-                    <button></button><button></button><button></button>
-                    <p></p>
-                    <a href=""></a><a href=""></a><a href=""></a>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
+                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
+                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                    </div>
+                    <h1>Senior Frontend Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
                 </article>
-                <button></button><button></button><button></button><button></button>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                </article>   
             </article>
-            <article class="">
-                <a href="" class=""></a>
-                <article class="">
-                    <button></button><button></button><button></button>
-                    <p></p>
-                    <a href=""></a><a href=""></a><a href=""></a>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
+                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
+                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                    </div>
+                    <h1>Senior Frontend Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
                 </article>
-                <button></button><button></button><button></button><button></button>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                </article>   
             </article>
-            <article class="">
-                <a href="" class=""></a>
-                <article class="">
-                    <button></button><button></button><button></button>
-                    <p></p>
-                    <a href=""></a><a href=""></a><a href=""></a>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
+                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
+                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                    </div>
+                    <h1>Senior Frontend Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
                 </article>
-                <button></button><button></button><button></button><button></button>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                </article>   
             </article>
-            <article class="">
-                <a href="" class=""></a>
-                <article class="">
-                    <button></button><button></button><button></button>
-                    <p></p>
-                    <a href=""></a><a href=""></a><a href=""></a>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
+                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
+                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                    </div>
+                    <h1>Senior Frontend Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
                 </article>
-                <button></button><button></button><button></button><button></button>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                </article>   
             </article>
-            <article class="">
-                <a href="" class=""></a>
-                <article class="">
-                    <button></button><button></button><button></button>
-                    <p></p>
-                    <a href=""></a><a href=""></a><a href=""></a>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
+                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
+                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                    </div>
+                    <h1>Senior Frontend Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
                 </article>
-                <button></button><button></button><button></button><button></button>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                </article>   
             </article>
-            <article class="">
-                <a href="" class=""></a>
-                <article class="">
-                    <button></button><button></button><button></button>
-                    <p></p>
-                    <a href=""></a><a href=""></a><a href=""></a>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
+                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
+                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                    </div>
+                    <h1>Senior Frontend Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
                 </article>
-                <button></button><button></button><button></button><button></button>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                </article>   
             </article>
+            
         </section>
     </main>
 </body>
